--- a/desafio_01/src/index.css
+++ b/desafio_01/src/index.css
@@ -29,6 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: whitesmoke;
 }
 
 h1 {
@@ -44,7 +45,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: grey;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -55,7 +56,13 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+input{
+  border-color: #1a1a1a;
+  background-color: white;
+  border: solid 3px black;
+  padding: 0.6em 1.2em;
+  border-radius: 10px;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
