feat: nova condicional de verificar expressões

--- a/desafio_01/src/index.css
+++ b/desafio_01/src/index.css
@@ -36,6 +36,11 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
   font-family: sans-serif;
+  color: black;
+}
+
+h2 {
+ color: darkred;
 }
 
 button {
