feat:atualizando estilização

--- a/desafio_01/src/index.css
+++ b/desafio_01/src/index.css
@@ -32,51 +32,45 @@ body {
   background-color: whitesmoke;
 }
 
+titulo {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+}
+
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  font-family: sans-serif;
+  margin: 0;
+  font-size: 32px;
+  color: black;
+}
+
+input[type="text"] {
+  background-color: #fff;
+  border: 1px solid black;
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: 20px;
+  border-radius: 10px;
+  color: black;
+}
+
+button {
+  background-color: #333;
+  color: #fff;
+  border: 1px solid whitesmoke;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+button:hover{
   color: black;
 }
 
 h2 {
- color: darkred;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: grey;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-input{
-  border-color: #1a1a1a;
-  background-color: white;
-  border: solid 3px black;
-  padding: 0.6em 1.2em;
-  border-radius: 10px;
-}
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  margin-top: 20px;
+  font-size: 18px;
+  color: #333;
 }
