--- a/desafio_01/src/index.css
+++ b/desafio_01/src/index.css
@@ -55,11 +55,14 @@ input[type="text"] {
   border-radius: 10px;
   color: black;
 }
-
+input[type="text"]:hover{
+  transform: scale(1.05);
+}
 button {
-  background-color: #333;
+  background-color: darkorchid;
   color: #fff;
-  border: 1px solid whitesmoke;
+  border: 1px solid black;
+  border-radius: 10px;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
@@ -68,7 +71,6 @@ button {
 button:hover{
   color: black;
 }
-
 h2 {
   margin-top: 20px;
   font-size: 18px;
